# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  codeclimat.yml  pyci.yml
gendiff/: __init__.py  pyproject.toml
gendiff/formatters/: format_plain.py  format_stylish.py
gendiff/logic/: create_diff.py  diff_creator.py  file_parser.py  generate_diff.py  logic_argparse.py  lower_bool.py
gendiff/scripts/: gendiff.py
source_file/: file1.yaml  file2.yaml
tests/: test_gendiff.py  test_generate_diff.py
tests/fixtures/: file2.yaml  fixtures.py  result_json.txt
